<resources>
    <string name="app_name" translatable="false">LogFox</string>
    <string name="crashes">Crashes</string>
    <string name="pause">Pause</string>
    <string name="settings">Settings</string>
    <string name="no_root">No root detected</string>
    <string name="text_copied">Text copied</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="query">Query</string>
    <string name="logging_status">Logging status</string>
    <string name="logging">Logging</string>
    <string name="exit">Exit</string>
    <string name="app_crashed">%s crashed</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="filter">Filter</string>
    <string name="about_app">About app</string>
    <string name="root" translatable="false">Root</string>
    <string name="adb" translatable="false">ADB</string>
    <string name="setup">Setup</string>
    <string name="how_to_use_adb">Since Android 13 Google has limited logcat access via ADB. You will be able to see logs only for several minutes, then you will need to restart logging.\n\nRun this command in Android Debug Bridge:\n\n%s</string>
    <string name="check">Check</string>
    <string name="developer">Developer</string>
    <string name="service">Service</string>
    <string name="source_code">Source code</string>
    <string name="unknown">Unknown</string>
    <string name="share">Share</string>
    <string name="zip">Zip</string>
    <string name="selected">Selected</string>
    <string name="clear_selected">Clear selected</string>
    <string name="nothing_is_selected">Nothing is selected</string>
    <string name="extended_copy">Extended copy</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="recordings">Recordings</string>
    <string name="record_file">Recording</string>
    <string name="delete">Delete</string>
    <string name="resume">Resume</string>
    <string name="foxbin" translatable="false">foxbin</string>
    <string name="ui" translatable="false">UI</string>
    <string name="logs_update_interval">Logs update interval</string>
    <string name="in_ms">In ms</string>
    <string name="this_is_not_a_number">This is not a number</string>
    <string name="logs_text_size">Logs text size</string>
    <string name="collect_java_crashes">Collect Java crashes</string>
    <string name="show_java_crashes_notifications">Show Java crashes notifications</string>
    <string name="collect_jni_crashes">Collect JNI crashes</string>
    <string name="show_jni_crashes_notifications">Show JNI crashes notifications</string>
    <string name="collect_anr">Collect ANR</string>
    <string name="show_anr_notifications">Show ANR notifications</string>
    <string name="error">Error: %s</string>
    <string name="log_levels">Log levels</string>
    <string name="uid" translatable="false">UID</string>
    <string name="pid" translatable="false">PID</string>
    <string name="tid" translatable="false">TID</string>
    <string name="tag">Tag</string>
    <string name="content_contains">Content contains</string>
    <string name="save">Save</string>
    <string name="filters">Filters</string>
    <string name="create">Create</string>
    <string name="empty_fields_desc">Empty fields will not be used during filtering</string>
    <string name="expanded_logs">Expanded logs</string>
    <string name="export">Export</string>
    <string name="str_import">Import</string>
    <string name="export_all">Export all</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="content">Content</string>
    <string name="logs_format">Logs format</string>
    <string name="no_permission_detected">No permission detected</string>
    <string name="logs_restart_required">All logs will be available only after restart</string>
    <string name="too_big_log">Error, maybe this log is too big, try to zip it and send</string>
    <string name="night_theme">Theme</string>
    <string name="follow_system">Follow system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="notifications">Notifications</string>
    <string name="logs">Logs</string>
    <string name="no_notification_permission">No notifications permission</string>
    <string name="notification_permission_is_required">Permission is required to send notifications with crashes</string>
    <string name="logging_notification">Notification about logging</string>
    <string name="resume_logging_with_bottom_edge_touch">Resume logging with bottom edge touch</string>
    <string name="start_on_launch">Start on app launch</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="service_required_desc">Service is just a stub to observe crashes in background. Without service Android kills LogFox</string>
    <string name="recording">Recording</string>
    <string name="title">Title</string>
    <string name="recording_status">Recording status</string>
    <string name="warning">Warning</string>
    <string name="recording_with_no_service_warning">You are trying to record with no logging service running. This can result in not saved recording due to Android background apps restrictions. Better to start logging service while recording.</string>
    <string name="links">Links</string>
    <string name="recording_paused">Recording paused</string>
    <string name="close">Close</string>
    <string name="android13_start_on_boot_warning">Since Android 13 Google has limited logcat launch from background. So, this toggle may not work. Use Root or Shizuku backend.</string>
    <string name="select">Select</string>
    <string name="logs_display_limit">Logs display limit</string>
    <string name="lines">Lines</string>
    <string name="terminal">Backend</string>
    <string name="terminal_default">Default</string>
    <string name="terminal_unavailable">Backend is unavailable</string>
    <string name="terminal_unavailable_falling_back">Backend is unavailable, falling back to default</string>
    <string name="new_terminal_selected">New backend selected</string>
    <string name="new_terminal_selected_question">Would you like to restart logging using it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart_logging">Restart logging</string>
    <string name="shizuku" translatable="false">Shizuku</string>
    <string name="shizuku_error">Error using Shizuku</string>
    <string name="shizuku_reminder">Don\'t forget to start Shizuku!</string>
    <string name="fallback_to_default_terminal">Fallback to default backend</string>
    <string name="fallback_to_default_terminal_desc">When selected one is not available. Otherwise LogFox will infinitely try to use it</string>
    <string name="including">Including</string>
    <string name="excluding">Excluding</string>
    <string name="package_name">Package name</string>
    <string name="apps">Apps</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="view">View</string>
    <string name="delete_warning">Are you sure want to delete it? This action cannot be undone.</string>
    <string name="clear_warning">Are you sure want to clear it? This action cannot be undone.</string>
    <string name="scroll_to_bottom">Scroll to the bottom</string>
    <string name="add">Add</string>
    <string name="crash_details">Crash details</string>
    <string name="app_icon">App icon</string>
    <string name="information">Information</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="releases">Releases</string>
    <string name="alpha_builds">Alpha builds</string>
    <string name="select_all">Select all</string>
    <string name="date_time">Date, time</string>
    <string name="date_format">Date format</string>
    <string name="time_format">Time format</string>
    <string name="archives">Archives</string>
    <string name="include_device_information_in_archives">Include device information in exported recordings and crashes</string>
    <string name="to_recording">To recording</string>
    <string name="no_logs">There are currently no logs</string>
    <string name="waiting_for_logs">Waiting for logs</string>
    <string name="all_logs_were_filtered_out">All logs were filtered out</string>
    <string name="no_crashes">There are currently no crashes</string>
    <string name="no_recordings">There are currently no recordings</string>
    <string name="no_filters">There are currently no filters</string>
    <string name="show_logs_from_app_launch">Show only logs which have appeared since the app launch</string>
    <string name="save_all_logs">Save all logs</string>
    <string name="saving_logs">Saving logs, this may take some time…</string>
    <string name="error_saving_logs">Error saving logs</string>
    <string name="session_cache">Session cache</string>
    <string name="use_session_cache">Cache sessions</string>
    <string name="session_cache_description">These are the logs saved during the whole LogFox logging session, they may be helpful in case of sudden app or system crash. They are included with exported crashes</string>
    <string name="session_cache_save_recordings">Save cached sessions to recordings</string>
    <string name="session_cache_lines_count">Session cache lines count</string>
    <string name="session_cache_size_warning">Session cache is kept in RAM, so make sure not to overflow it with chosen count</string>
</resources>