<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/ui" app:iconSpaceReserved="false">
        <Preference
            android:title="@string/logs_update_interval"
            android:key="pref_logs_update_interval"
            app:iconSpaceReserved="false" />
        <Preference
            android:title="@string/logs_text_size"
            android:key="pref_logs_text_size"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/service" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:title="@string/start_on_boot"
            android:key="pref_start_on_boot"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Java" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:title="@string/collect_java_crashes"
            android:key="pref_collect_java"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/show_java_crashes_notifications"
            android:key="pref_notifications_java"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="JNI" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:title="@string/collect_jni_crashes"
            android:key="pref_collect_jni"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/show_jni_crashes_notifications"
            android:key="pref_notifications_jni"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="ANR" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:title="@string/collect_anr"
            android:key="pref_collect_anr"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/show_anr_notifications"
            android:key="pref_notifications_anr"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_app" app:iconSpaceReserved="false">
        <Preference
            android:title="@string/developer"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/f0x1d" />
        </Preference>
        <Preference
            android:title="@string/source_code"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/F0x1d/LogFox" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>