<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/ui" app:iconSpaceReserved="false">
        <Preference
            android:title="@string/night_theme"
            android:key="pref_night_theme"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/logs"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false">

        <Preference
            android:title="@string/logs_format"
            android:key="pref_logs_format"
            app:iconSpaceReserved="false" />
        <Preference
            android:title="@string/logs_update_interval"
            android:key="pref_logs_update_interval"
            app:iconSpaceReserved="false" />
        <Preference
            android:title="@string/logs_text_size"
            android:key="pref_logs_text_size"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/expanded_logs"
            android:key="pref_logs_expanded"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>