<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/no_notification_permission"
        android:summary="@string/notification_permission_is_required"
        android:key="pref_notifications_permission"
        app:widgetLayout="@layout/preference_warning"
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false"/>

    <PreferenceCategory
        android:title="@string/notifications"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false">

        <Preference
            android:title="@string/logging_notification"
            android:key="pref_logging_notification"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:title="@string/show_java_crashes_notifications"
            android:key="pref_notifications_java"
            android:defaultValue="true"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/show_jni_crashes_notifications"
            android:key="pref_notifications_jni"
            android:defaultValue="true"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/show_anr_notifications"
            android:key="pref_notifications_anr"
            android:defaultValue="true"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/service_start"
        android:key="pref_category_service_start"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false">

        <SwitchPreferenceCompat
            android:title="@string/show_start_service_reminder_notification_on_boot"
            android:key="pref_show_start_service_notification_on_boot"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>