<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:summary="@string/service_required_desc"
        android:selectable="false"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:title="@string/terminal"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false">

        <Preference
            android:title="@string/terminal"
            android:key="pref_selected_terminal_index"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/service"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false">

        <SwitchPreferenceCompat
            android:title="@string/start_on_boot"
            android:key="pref_start_on_boot"
            android:defaultValue="true"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:title="@string/start_on_launch"
            android:key="pref_start_on_launch"
            android:defaultValue="true"
            app:singleLineTitle="false"
            app:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>