<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/log_levels_button"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:id="@+id/log_levels_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_levels"
        app:icon="@drawable/ic_alert"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pid_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/pid_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pid"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/log_levels_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pid_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/tid_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tid"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/pid_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tid_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/tag_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tag"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tid_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tag_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/content_contains"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tag_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/empty_desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/empty_fields_desc"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/content_layout"
        app:layout_constraintStart_toStartOf="@id/content_layout"
        app:layout_constraintEnd_toEndOf="@id/content_layout"
        app:layout_constraintBottom_toTopOf="@id/save_button"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.Icon"
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:icon="@drawable/ic_save"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/empty_desc_text"
        app:layout_constraintStart_toStartOf="@id/log_levels_button"
        app:layout_constraintEnd_toEndOf="@id/log_levels_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>