<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:fontFamily="@font/google_sans_medium"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/query_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/query_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/query"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/query_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/google_sans_medium"
            android:inputType="text"
            android:imeOptions="actionSearch"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/query_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:id="@+id/clear_search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            app:icon="@drawable/ic_clear"
            app:strokeColor="?colorPrimary"
            app:strokeWidth="2dp"
            android:fontFamily="@font/google_sans_medium"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.Icon"
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            android:fontFamily="@font/google_sans_medium"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/clear_search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>